--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-hello tottori
+<!DOCTYPE html>
+<html lang="ja" translate="no">
+<head>
+<meta charset="UTF-8">
+<title>Tottori Prefecture</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+</head>
+<body>
+<center>
+<img src="https://prefecture.pages.dev/flag/Flag_of_Tottori_Prefecture.svg" width="250px"><h3>鳥取県</h3>
+</center>
+</body>
+</html>
